--- a/res/layout/drink_item.xml
+++ b/res/layout/drink_item.xml
@@ -24,14 +24,12 @@
                 android:id="@+id/view_drink_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Drink title"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/view_drink_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Subtitle"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
         </LinearLayout>
@@ -49,9 +47,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center_horizontal"
-                android:text="$0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#995555"
+                android:textColor="@android:color/holo_blue_light"
                 android:textStyle="bold" />
 
 <!--  
