--- a/res/layout/user_item.xml
+++ b/res/layout/user_item.xml
@@ -7,27 +7,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
-        android:background="@drawable/rounded_corner_dark"
-        android:padding="4dp" >
+        android:layout_marginBottom="1dp" >
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/view_user_list_image_resource"
             android:layout_width="100dp"
-            android:layout_height="100dp" >
-
-            <ImageView
-                android:id="@+id/view_user_list_image_resource"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:scaleType="fitXY" />
-
-            <ImageView
-                android:id="@+id/ImageView16"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/frame" />
-        </RelativeLayout>
+            android:layout_height="100dp"
+            android:scaleType="fitXY" />
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -47,18 +33,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
 
-                <FrameLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="1dp" >
-
-                    <ImageView
-                        android:id="@+id/ImageView15"
-                        android:layout_width="17dp"
-                        android:layout_height="17dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_checked_in" />
-                </FrameLayout>
+                <ImageView
+                    android:id="@+id/ImageView15"
+                    android:layout_width="17dp"
+                    android:layout_height="17dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_checked_in" />
 
                 <TextView
                     android:id="@+id/TextView10"
@@ -70,6 +50,7 @@
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
