--- a/res/layout/init_main.xml
+++ b/res/layout/init_main.xml
@@ -4,13 +4,30 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@drawable/background_logo"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="2dp" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
-        android:orientation="vertical" >
+        android:orientation="horizontal"
+        android:padding="4dp" >
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2" >
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/TextView01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ALPHA"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@android:color/holo_red_dark"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -32,13 +49,23 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <Button
+            android:id="@+id/view_init_sign_in"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/arrowexpand_light"
+            android:gravity="left|center_vertical"
+            android:text="Sign in with Bartsy"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <Button
             android:id="@+id/view_init_google"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/arrowexpand_light"
             android:gravity="left|center_vertical"
-            android:text="Sign up with Google"
+            android:text="Sign in with Google"
             android:textAppearance="?android:attr/textAppearanceLargeInverse" />
 
         <Button
@@ -49,7 +76,18 @@
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:drawableLeft="@drawable/arrowexpand_light"
             android:gravity="left|center_vertical"
-            android:text="Sign up with Facebook"
+            android:text="Sign in with Facebook"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <Button
+            android:id="@+id/view_init_toggle_sign_up"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:drawableLeft="@drawable/arrowexpand_light"
+            android:gravity="left|center_vertical"
+            android:text="Sign up..."
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <Button
@@ -62,16 +100,6 @@
             android:gravity="left|center_vertical"
             android:text="Sign in..."
             android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <Button
-            android:id="@+id/view_init_help"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/arrowexpand_light"
-            android:gravity="left|center_vertical"
-            android:text="Help"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
 
     <LinearLayout
@@ -79,6 +107,16 @@
         android:layout_height="0dp"
         android:layout_weight="2"
         android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/view_main_deployment_environment"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:gravity="center|bottom"
+            android:text="PRODUCTION SERVER"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@android:color/holo_red_dark"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -88,9 +126,8 @@
         android:layout_height="wrap_content"
         android:gravity="bottom|center_horizontal"
         android:padding="@dimen/activity_vertical_margin"
-        android:text="Copyright (C) Vendsy, Inc. All rights reserved."
+        android:text="(C) Vendsy, Inc. All rights reserved."
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="#ff33b5e5"
-        android:textSize="10sp" />
+        android:textColor="#ff33b5e5" />
 
 </LinearLayout>
