--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,13 +4,31 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@drawable/background_logo"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="2dp" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2" >
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/TextView01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="4dp"
+            android:text="ALPHA"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@android:color/holo_red_dark"
+            android:textStyle="bold" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -73,23 +91,37 @@
 
     </LinearLayout>
 
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2" >
+    </FrameLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/view_main_deployment_environment"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="PRODUCTION SERVER"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@android:color/holo_red_dark"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom|center_horizontal"
-        android:padding="@dimen/activity_vertical_margin"
-        android:text="Copyright (C) Vendsy, Inc. All rights reserved."
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="#ff33b5e5"
-        android:textSize="10sp" />
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="bottom|center_horizontal"
+            android:padding="@dimen/activity_vertical_margin"
+            android:text="(C) Vendsy, Inc. All rights reserved."
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="#ff33b5e5" />
+
+    </LinearLayout>
 
 </LinearLayout>
