--- a/res/layout/orders_open_item_list.xml
+++ b/res/layout/orders_open_item_list.xml
@@ -52,7 +52,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
-                                android:text="Close"
+                                android:text="Dismiss"
                                 android:visibility="gone" />
 
                         </LinearLayout>
@@ -74,8 +74,8 @@
 
                             <ImageView
                                 android:id="@+id/view_order_profile_picture"
-                                android:layout_width="70dp"
-                                android:layout_height="70dp"
+                                android:layout_width="75dp"
+                                android:layout_height="75dp"
                                 android:layout_marginRight="3dp"
                                 android:scaleType="centerCrop"
                                 android:src="@drawable/profile" />
