Several fixes in custom drinks code and UI.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@292 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/custom_drinks_main.xml
+++ b/res/layout/custom_drinks_main.xml
@@ -7,17 +7,18 @@
 
     <LinearLayout
         android:id="@+id/view_drinks_list"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_gravity="right"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:background="#dddddd"
         android:gravity="center_horizontal"
         android:orientation="vertical" >
+
        <ListView
-        android:id="@+id/drinksListView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+           android:id="@+id/drinksListView"
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content" >
+
        </ListView>
     </LinearLayout>
 
