--- a/res/layout/custom_drink_modifier.xml
+++ b/res/layout/custom_drink_modifier.xml
@@ -13,39 +13,28 @@
             android:id="@+id/view_order_button_remove"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="45dp"
-            android:layout_height="fill_parent"
+            android:layout_height="45dp"
             android:drawableRight="@drawable/closewindow"
             android:gravity="left|center_vertical"
             android:textSize="14sp" />
-	
-	    <LinearLayout
-	        android:layout_width="0dp"
-	        android:layout_height="match_parent"
-	        android:layout_weight="2"
-	        android:orientation="vertical"
-	        android:padding="4dp" >
-	
-	        <TextView
-	            android:id="@+id/view_order_title"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_gravity="center_vertical"
-	            android:text="Martini"
-	            android:textColor="#000000"
-	            android:textSize="16sp"
-	            android:textStyle="bold" />
-	        
-	    </LinearLayout>
+
+        <TextView
+            android:id="@+id/view_order_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Martini"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textStyle="bold" />
 	
 	    <TextView
 	        android:id="@+id/TextView02"
 	        android:layout_width="wrap_content"
 	        android:layout_height="fill_parent"
 	        android:gravity="center_vertical"
-	        android:text="$"
-	        android:textAppearance="?android:attr/textAppearanceMediumInverse"
-	        android:textColor="#995555"
-	        android:textSize="16sp"
+	        android:text="$ "
+	        android:textAppearance="?android:attr/textAppearanceMedium"
+	        android:textColor="@android:color/holo_blue_light"
 	        android:textStyle="bold" />
 	
 	    <TextView
@@ -55,9 +44,8 @@
 	        android:layout_marginRight="@dimen/activity_horizontal_margin"
 	        android:gravity="center_vertical"
 	        android:text="12"
-	        android:textAppearance="?android:attr/textAppearanceMediumInverse"
-	        android:textColor="#995555"
-	        android:textSize="16sp"
+	        android:textAppearance="?android:attr/textAppearanceMedium"
+	        android:textColor="@android:color/holo_blue_light"
 	        android:textStyle="bold" />
 	
 	</LinearLayout>
