--- a/res/layout/open_closed_orders_main.xml
+++ b/res/layout/open_closed_orders_main.xml
@@ -25,8 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:textOff="Past orders"
-            android:textOn="Past orders" />
+            android:textOff="All orders"
+            android:textOn="All orders" />
     </LinearLayout>
         
         <LinearLayout
