--- a/res/layout/orders_open_item_list.xml
+++ b/res/layout/orders_open_item_list.xml
@@ -117,7 +117,8 @@
                                         android:layout_height="match_parent"
                                         android:layout_marginTop="4dp"
                                         android:gravity="right"
-                                        android:orientation="vertical" >
+                                        android:orientation="vertical"
+                                        android:visibility="gone" >
 
                                         <LinearLayout
                                             android:layout_width="wrap_content"
