--- a/res/layout/user_profile.xml
+++ b/res/layout/user_profile.xml
@@ -264,13 +264,24 @@
                     android:layout_gravity="center_vertical"
                     android:orientation="horizontal" >
 
-                    <TextView
-                        android:id="@+id/view_profile_cc_type"
+                    <LinearLayout
                         android:layout_width="90dp"
-                        android:layout_height="fill_parent"
-                        android:layout_gravity="right"
-                        android:gravity="center_vertical"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                        android:layout_height="match_parent" >
+
+                        <ImageView
+                            android:id="@+id/imageView1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/credit_card" />
+
+                        <TextView
+                            android:id="@+id/view_profile_cc_type"
+                            android:layout_width="wrap_content"
+                            android:layout_height="fill_parent"
+                            android:gravity="center_vertical"
+                            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/view_profile_cc_number_redacted"
@@ -330,12 +341,22 @@
 
                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/ImageView01"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/div_light_grey" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <FrameLayout
+                        android:layout_width="90dp"
+                        android:layout_height="match_parent" >
+                    </FrameLayout>
+
+                    <ImageView
+                        android:id="@+id/ImageView01"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/div_light_grey" />
+
+                </LinearLayout>
 
                 <LinearLayout
                     style="?android:attr/buttonBarStyle"
@@ -344,13 +365,19 @@
                     android:gravity="center"
                     android:orientation="horizontal" >
 
+                    <FrameLayout
+                        android:layout_width="90dp"
+                        android:layout_height="match_parent" >
+
+                    </FrameLayout>
+
                     <Button
                         android:id="@+id/view_profile_button_cc_replace"
                         style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
-                        android:text="Rescan..."
+                        android:text="Edit..."
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textStyle="bold" />
 
@@ -363,6 +390,7 @@
                         android:text="Delete..."
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textStyle="bold" />
+
                 </LinearLayout>
             </LinearLayout>
 
