--- a/res/layout/orders_open_item_list.xml
+++ b/res/layout/orders_open_item_list.xml
@@ -115,10 +115,10 @@
                                     <LinearLayout
                                         android:layout_width="wrap_content"
                                         android:layout_height="match_parent"
+                                        android:layout_marginRight="2dp"
                                         android:layout_marginTop="4dp"
                                         android:gravity="right"
-                                        android:orientation="vertical"
-                                        android:visibility="gone" >
+                                        android:orientation="vertical" >
 
                                         <LinearLayout
                                             android:layout_width="wrap_content"
@@ -160,7 +160,7 @@
                                             android:layout_height="wrap_content" >
 
                                             <TextView
-                                                android:id="@+id/TextView07"
+                                                android:id="@+id/view_order_expires_text"
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
                                                 android:text="Expires: "
@@ -169,7 +169,7 @@
                                                 android:textStyle="bold" />
 
                                             <TextView
-                                                android:id="@+id/view_order_timeout"
+                                                android:id="@+id/view_order_timeout_value"
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
                                                 android:text="3 min"
