--- a/res/layout/orders_open_item_list.xml
+++ b/res/layout/orders_open_item_list.xml
@@ -197,7 +197,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_weight="2"
-                                        android:text="Peter Kellis"
+                                        android:text="You"
                                         android:textAppearance="?android:attr/textAppearanceMedium"
                                         android:textStyle="bold" />
                                 </LinearLayout>
