Changed the way orders work to the asynchronous polling method using PN's as indications there is work to pull. Some things don't work yet. A lot do.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@307 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -67,7 +67,8 @@
             android:drawableLeft="@drawable/arrowexpand_light"
             android:gravity="left|center_vertical"
             android:text="My notifications"
-            android:textAppearance="?android:attr/textAppearanceLargeInverse" />
+            android:textAppearance="?android:attr/textAppearanceLargeInverse"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/button_my_profile"
