--- a/res/layout/init_main.xml
+++ b/res/layout/init_main.xml
@@ -77,7 +77,8 @@
             android:drawableLeft="@drawable/arrowexpand_light"
             android:gravity="left|center_vertical"
             android:text="Sign in with Facebook"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/view_init_toggle_sign_up"
