--- a/res/layout/user_profile.xml
+++ b/res/layout/user_profile.xml
@@ -40,7 +40,7 @@
                         android:id="@+id/TextView02"
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
-                        android:text="Email" />
+                        android:text="Email*" />
 
                     <EditText
                         android:id="@+id/view_profile_email"
@@ -129,7 +129,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:text="How venue staff will see you*"
+                android:text="How you will appear to others"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
@@ -177,7 +177,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:text="Display name:" />
+                        android:text="Display name*" />
 
                     <EditText
                         android:id="@+id/view_profile_nickname"
@@ -304,6 +304,7 @@
                         android:layout_width="90dp"
                         android:layout_height="wrap_content"
                         android:ems="14"
+                        android:text="VISA or MC"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
 
                     <TextView
