--- a/res/layout/user_profile.xml
+++ b/res/layout/user_profile.xml
@@ -211,7 +211,8 @@
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:background="@drawable/rounded_corner_dark"
                 android:orientation="vertical"
-                android:padding="@dimen/activity_vertical_margin" >
+                android:padding="@dimen/activity_vertical_margin"
+                android:visibility="gone" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -304,7 +305,6 @@
                         android:layout_width="90dp"
                         android:layout_height="wrap_content"
                         android:ems="14"
-                        android:text="VISA or MC"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
 
                     <TextView
@@ -418,16 +418,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:drawableLeft="@drawable/credit_card"
-                        android:text="Add credit card..."
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-                    <Button
-                        android:id="@+id/view_profile_button_add_paypal"
-                        style="?android:attr/buttonBarButtonStyle"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Add PayPal..."
+                        android:text="Add credit card (VISA or MasterCard)..."
                         android:textAppearance="?android:attr/textAppearanceSmall" />
                 </LinearLayout>
             </LinearLayout>
@@ -547,7 +538,9 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:ems="10"
+                            android:hint="mm/dd/yyyy"
                             android:inputType="date" />
+
                     </LinearLayout>
 
                     <LinearLayout
