Changed the ids for the views
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@325 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/offer_drink_notifications_item.xml
+++ b/res/layout/offer_drink_notifications_item.xml
@@ -49,7 +49,7 @@
                             android1:padding="1dp" >
 
                             <ImageView
-                                android1:id="@+id/ImageView22"
+                                android1:id="@+id/messageTypeImage"
                                 android1:layout_width="17dp"
                                 android1:layout_height="17dp"
                                 android1:scaleType="fitXY"
@@ -83,7 +83,7 @@
                     android1:layout_height="80dp" >
 
                     <ImageView
-                        android1:id="@+id/ImageView47"
+                        android1:id="@+id/otherProfileImage"
                         android1:layout_width="105dp"
                         android1:layout_height="105dp"
                         android1:scaleType="fitXY"
